# behaviours-rs

./: .gitignore  Cargo.toml  Notes.md  README.md  build  watch  watch.sh
examples/: 01.js  04.js  05.js  bootstrap.js  index.js  package-lock.json  package.json
src/: lib.rs
test/: 01.js  02.js  03.js  index.html  index.js  old.js  package-lock.json  package.json  webpack.config.js
