[package]
name = "behaviours-rs"
version = "0.1.0"
authors = ["Szymon Kaliski <hi@szymonkaliski.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.20"
kdtree = "0.5.1"
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.wasm-bindgen]
version = "0.2.43"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = ["console"]
